test/tests/compiler/6_statements_and_conditional_expressions/valid/else.plx
pub fn main(none) i32 {
    a: i32 = 0
    if a {
        return 1
    }
    else {
        return 2
    }
}
