test/tests/compiler/6_statements_and_conditional_expressions/invalid_parse/if_assignment.plx
pub fn main(none) i32 {
    flag: i32 = 0
    a: i32 = if flag {
        2
    }
    else {
        3
    }
    return a
}
